Refactor inventory and AI modules; update project version to 15.0.5
- Replaced `Action` interface with `ActionType` enum for enhanced action representation.
- Added `SpeechRecognition` component to facilitate text input via speech in `ChatView`.
- Updated `InventoryTransfer`, `InventoryRO`, and `InventorySale` to support location-based validation and action descriptions using `ActionType`.
- Introduced `attachConsignmentFrom` in `InventoryGRN` for linking consignments efficiently.
- Refined `LocationField` to leverage `Deque` for better performance.
- Improved `Consignment` type handling and updated relevant references.